# cpu-sim

./: CMakeLists.txt
data/: p1.csv
src/: io.cpp  io.h  main.cpp  metrics.h  simulator.cpp  simulator.h
src/schedulers/: fcfs.cpp  fcfs.h  priority.cpp  priority.h  rr.cpp  rr.h  sjf.cpp  sjf.h
